--- a/sass/parts/_framework/_typography.scss
+++ b/sass/parts/_framework/_typography.scss
@@ -64,6 +64,7 @@ article, .typography,.subtitle{
 		margin-bottom: 		1.8rem;
 		&:last-of-type {margin-bottom: 0;}
 	}
+	img{max-width: 100%}
 }
 
 
