--- a/sass/parts/elements/_header.scss
+++ b/sass/parts/elements/_header.scss
@@ -108,7 +108,7 @@ header{
 	}
 }
 @media only screen and (max-width: $mobile) {
-	header{
+	.title{
 		h1{height: 18rem;}
 	}
 }
