--- a/sass/parts/pages/_home.scss
+++ b/sass/parts/pages/_home.scss
@@ -113,6 +113,7 @@
 			align-items: center;
 			text-align: center;
 			flex-wrap: wrap;
+			z-index: 10;
 			h5,h6,span{
 				width: 100%;
 				display: block;
